CollectionRoutingInfoTargeter constructor can fail when fcv is uninitialized

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-10-28, CAR Team 2024-11-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When constructing a `CollectionRoutingInfoTargeter`, we depend on the value of the `gUpdateOneWithIdWithoutShardKey` feature flag by calling `isEnabled`. If the feature compatibility version (FCV) is uninitialized, this will lead to a failure.

      To address this, I propose using the safer method `isEnabledUseLastLTSFCVWhenUninitialized` when checking the value of the feature flag. Additionally, we should look for more instances of this usage in the file.

            Assignee:
            Pol Pinol
            Reporter:
            Pol Pinol
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: