SERVER-95980 Make `CollectionRoutingInfoTargeter` constructor robust when fcv is uninitialized (#28620)

GitOrigin-RevId: 64f95d4120e4ebd32f1976c33abbe49745481b15